[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Choice.tscn" type="PackedScene" id=2]
[ext_resource path="res://MainTitle.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameOver.tscn" type="PackedScene" id=4]
[ext_resource path="res://Win.tscn" type="PackedScene" id=5]

[node name="Main" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Choice" parent="." index="0" instance=ExtResource( 2 )]

visible = false

[node name="MainTitle" parent="." index="1" instance=ExtResource( 3 )]

[node name="GameOver" parent="." index="2" instance=ExtResource( 4 )]

visible = false

[node name="Win" parent="." index="3" instance=ExtResource( 5 )]

visible = false

[connection signal="main_to_difficulty_selection" from="MainTitle" to="." method="_on_MainTitle_main_to_difficulty_selection"]


